# simple-base

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/base/: __init__.py  debug.py  log.py  tempfile.py  timer.py  utils.py
